# src/main/java/com/fantasy/db/projection/dto/ProjectionResponse.java
@@ -1,5 +1,6 @@
 package com.fantasy.db.projection.dto;
 
+import com.fantasy.db.projection.Season;
 import com.fantasy.db.projection.UserProjection;
 import io.swagger.v3.oas.annotations.media.Schema;
 
@@ -8,7 +9,8 @@ import java.time.Instant;
 public record ProjectionResponse(
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED) String id,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED) String name,
-        @Schema(requiredMode = Schema.RequiredMode.REQUIRED) String data,
+        @Schema(requiredMode = Schema.RequiredMode.REQUIRED) Season season,
+        @Schema(requiredMode = Schema.RequiredMode.REQUIRED) ProjectionData data,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED) Instant createdAt,
         @Schema(requiredMode = Schema.RequiredMode.REQUIRED) Instant updatedAt
 ) {
@@ -16,6 +18,7 @@ public record ProjectionResponse(
         return new ProjectionResponse(
                 projection.getId().toString(),
                 projection.getName(),
+                projection.getSeason(),
                 projection.getData(),
                 projection.getCreatedAt(),
                 projection.getUpdatedAt());
